k8s/kyverno/validate/kyverno-block-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: require-image-tag
      match:
        resources:
          kinds:
          - Pod
      validate:
        message: "Using ':latest' tag is prohibited for security reasons. Please specify a fixed version tag."
        pattern:
          spec:
            containers:
            - image: "!*latest"
