k8s/kyverno/validate/kyverno-no-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: Enforce
  background: false
  rules:
  - name: require-run-as-non-root
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces:
        - kube-system
        - kyverno
        - monitoring
        - trivy-system
    validate:
      message: "Running as root is forbidden. Containers must set securityContext.runAsNonRoot to true."
      pattern:
        spec:
          containers:
          - securityContext:
              runAsNonRoot: true
